--- a/index.css
+++ b/index.css
@@ -1,3 +1,28 @@
-#heading{
-    color: #b51616;
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.logo{
+    width: 150px;
+}
+.nav-items > ul{
+    display: flex;
+    padding: 0 50px;
+    font-size: x-large;
+    font-weight: 400;
+    list-style-type: none;
+}
+.nav-items > ul > li{
+    padding: 10px;
+    margin: 10px;
+   
+}
+.res-card{
+    width: 200px;
+    height: 300px;
+    border: 1px solid black;
+}
+.search{
+    padding: 10px;
 }
