--- a/index.css
+++ b/index.css
@@ -18,11 +18,23 @@
     margin: 10px;
    
 }
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
 .res-card{
-    width: 200px;
-    height: 300px;
+    margin: 5px;
+    padding: 5px;
+    width: 196px;
+    height: 350px;
+}
+.res-card:hover{
+    cursor: pointer;
     border: 1px solid black;
 }
 .search{
     padding: 10px;
+}
+.res-image{
+    width: 100%;
 }
