--- a/index.css
+++ b/index.css
@@ -25,8 +25,8 @@
 .res-card{
     margin: 5px;
     padding: 5px;
-    width: 196px;
-    height: 350px;
+    width: 200px;
+    height: 450px;
 }
 .res-card:hover{
     cursor: pointer;
@@ -37,4 +37,5 @@
 }
 .res-image{
     width: 100%;
+    height: 40%;
 }
