--- a/index.css
+++ b/index.css
@@ -40,6 +40,26 @@
     height: 30%;
 }
 .filter-btn{
-    padding:5px;
     margin: 10px;
+    width: 200px;
+    height: 21px;
+}
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    margin: 5px;
+    margin-top: 50px;
+    padding: 5px;
+    width: 194px;
+    height: 450px;
+    background-color:#f0f0f0;
+}
+.login-btn{
+    padding: 0 20px;
+    cursor: pointer;
+}
+.filter{
+    display: flex;
 }
