--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 
-/* .header{
+.header{
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
@@ -67,4 +67,4 @@
 }
 .filter{
     display: flex;
-} */
+} 
