--- a/index.css
+++ b/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "Gilroy";
+    src: url("./src/Fonts/Gilroy-Regular.ttf");
+  }
 
 .header{
     display: flex;
