--- a/index.css
+++ b/index.css
@@ -5,70 +5,102 @@
 @font-face {
     font-family: "Gilroy";
     src: url("./src/Fonts/Gilroy-Regular.ttf");
-  }
-
-.header{
+}
+@font-face {
+    font-family: "Gilroy-Bold";
+    src: url("./src/Fonts/Gilroy-Bold.ttf");
+}
+@font-face {
+    font-family: "Gilroy";
+    src: url("./src/Fonts/Gilroy-semiBold.ttf");
+}
+@font-face {
+    font-family: "Gilroy-extraBold";
+    src: url("./src/Fonts/Gilroy-ExtraBold.ttf");
+}
+@font-face {
+    font-family: "Gilroy-mediumBold";
+    src: url("./src/Fonts/Gilroy-Medium.ttf");
+}
+@font-face {
+    font-family: "Gilroy-semiBold";
+    src: url("./src/Fonts/Gilroy-semiBold.ttf");
+}
+.header {
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
 }
-.logo{
+
+.logo {
     width: 150px;
 }
-.nav-items > ul{
+
+.nav-items>ul {
     display: flex;
     padding: 0 50px;
     font-size: x-large;
     font-weight: 400;
     list-style-type: none;
 }
-.nav-items > ul > li{
+
+.nav-items>ul>li {
     padding: 10px;
     margin: 10px;
-   
+
 }
-.res-container{
+
+.res-container {
     display: flex;
     flex-wrap: wrap;
 }
-.res-card{
+
+.res-card {
     margin: 5px;
     padding: 5px;
     width: 194px;
     height: 450px;
 }
-.res-card:hover{
+
+.res-card:hover {
     cursor: pointer;
     border: 1px solid black;
 }
-.search{
+
+.search {
     padding: 10px;
 }
-.res-image{
+
+.res-image {
     width: 100%;
     height: 30%;
 }
-.filter-btn{
+
+.filter-btn {
     margin: 10px;
     width: 200px;
     height: 21px;
 }
-.shimmer-container{
+
+.shimmer-container {
     display: flex;
     flex-wrap: wrap;
 }
-.shimmer-card{
+
+.shimmer-card {
     margin: 5px;
     margin-top: 50px;
     padding: 5px;
     width: 194px;
     height: 450px;
-    background-color:#f0f0f0;
+    background-color: #f0f0f0;
 }
-.login-btn{
+
+.login-btn {
     padding: 0 20px;
     cursor: pointer;
 }
-.filter{
+
+.filter {
     display: flex;
-} 
+}
